:lipstick: fix footer overlap issue

--- a/app/assets/stylesheets/partials/admin/_sponsorship.scss
+++ b/app/assets/stylesheets/partials/admin/_sponsorship.scss
@@ -5,6 +5,7 @@
   @media (max-width: 550px) {
     margin-top: 30px;
   }
+  padding-bottom: 150px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
